# fuzzy-inference-system

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp
ANFIS/: CMakeLists.txt  main.cpp
ANFIS/algorithm/: Backpropagation.cpp  Backpropagation.h
ANFIS/layer/: ANFIS.cpp  ANFIS.h  AntecedentLayer.cpp  AntecedentLayer.h  ConsequentLayer.cpp  ConsequentLayer.h  Layer.h  NormalizingLayer.h  OutputLayer.cpp  OutputLayer.h
ANFIS/loss/: Loss.cpp
ANFIS/membership/: AnfisMembershipFunction.h  GaussMembershipFunction.cpp  GaussMembershipFunction.h  SigmoidMembershipFunction.cpp  SigmoidMembershipFunction.h
ANFIS/tnorm/: TNorm.cpp
FIS/: CMakeLists.txt  main.cpp
FIS/conf/: lang_variables.conf  rules.conf
FIS/democonf/: lang_variables.conf
FIS/domain/: CompositeDomain.h  Domain.cpp  Domain.h  DomainElement.cpp  DomainElement.h  RangeDomain.cpp  RangeDomain.h
FIS/fuzzyset/: FuzzySet.cpp  FuzzySet.h  MembershipFunction.h  Operators.h
FIS/inference/: Clause.cpp  Clause.h  Defuzzifier.cpp  Defuzzifier.h  FuzzyInput.cpp  FuzzyInput.h  InferenceSystem.cpp  InferenceSystem.h  Rule.cpp  Rule.h
FIS/language_variable/: LanguageTerm.cpp  LanguageTerm.h  LanguageVariable.cpp  LanguageVariable.h
FIS/norm/: Norm.cpp  Norm.h
FIS/parser/: Helper.cpp  Helper.h  Parser.h  RulesParser.cpp  RulesParser.h  VariableParser.cpp  VariableParser.h
FIS/rule/: Antecedent.cpp  Antecedent.h  Clause.cpp  Clause.h  Consequent.cpp  Consequent.h  Defuzzifier.cpp  Defuzzifier.h  InferenceSystem.cpp  InferenceSystem.h  KnowledgeBase.cpp  KnowledgeBase.h  Rule.cpp  Rule.h
anfis/: CMakeLists.txt  main.cpp
anfis/algorithm/: Backpropagation.cpp  Backpropagation.h
anfis/layer/: ANFIS.cpp  ANFIS.h  AntecedentLayer.cpp  AntecedentLayer.h  ConsequentLayer.cpp  ConsequentLayer.h  Layer.h  NormalizingLayer.cpp  NormalizingLayer.h  OutputLayer.cpp  OutputLayer.h
anfis/loss/: Loss.h
anfis/membership/: AnfisMembershipFunction.cpp  AnfisMembershipFunction.h  GaussMembershipFunction.cpp  GaussMembershipFunction.h  SigmoidMembershipFunction.cpp  SigmoidMembershipFunction.h
anfis/tnorm/: TNorm.cpp  TNorm.h
conf/: lang_variables  lang_variables.conf
doc/: Projekt.doc  presentation.tex  tehndok.doc
fuzzy/: LanguageVariable.cpp  LanguageVariable.h  MembershipFunctions.cpp  MembershipFunctions.h  Operators.cpp  Operators.h
fuzzy-inference-system/: CMakeLists.txt  main.cpp
fuzzy-inference-system/conf/: rules.conf
fuzzy-inference-system/democonf/: lang_variables.conf  rules.conf
fuzzy-inference-system/domain/: CompositeDomain.cpp  CompositeDomain.h  Domain.cpp  Domain.h  DomainElement.h  RangeDomain.cpp  RangeDomain.h
fuzzy-inference-system/fuzzyset/: FuzzySet.cpp  FuzzySet.h  MembershipFunction.cpp  MembershipFunction.h  Operators.cpp
fuzzy-inference-system/inference/: Clause.h  Defuzzifier.cpp  Defuzzifier.h  FuzzyInput.cpp  FuzzyInput.h  InferenceSystem.cpp  InferenceSystem.h  Rule.cpp  Rule.h
fuzzy-inference-system/language_variable/: LanguageTerm.h  LanguageVariable.cpp  LanguageVariable.h
fuzzy-inference-system/parser/: Helper.cpp  Helper.h  Parser.h  RulesParser.cpp  RulesParser.h  VariableParser.cpp  VariableParser.h
fuzzy/domain/: Domain.h
simulator/: config.txt  run.sh
simulator/Primjeri/C i C++/: primjer.c
simulator/Primjeri/C#/: config.txt  primjer.cs
simulator/Primjeri/Java/: config.txt
simulator/Primjeri/Python/: config.txt  primjer.py
src/: main.cpp
src/fuzzy/: Defuzzifier.cpp  Defuzzifier.h  FuzzySet.cpp  FuzzySet.h  MembershipFunction.cpp  MembershipFunction.h  MembershipFunctions.cpp  MembershipFunctions.h  Operators.cpp  Operators.h
src/fuzzy/domain/: .Domain.h.swp  CompositeDomain.cpp  CompositeDomain.h  Domain.cpp  Domain.h  DomainElement.cpp  DomainElement.h  DomainRange.cpp  DomainRange.h  RangeDomain.cpp  RangeDomain.h
src/fuzzy/inference/: Clause.cpp  Clause.h  FuzzyInput.cpp  FuzzyInput.h  InferenceSystem.cpp  InferenceSystem.h  Rule.cpp  Rule.h
src/fuzzy/language_variable/: LanguageTerm.cpp  LanguageTerm.h  LanguageVariable.cpp  LanguageVariable.h
src/fuzzy/parser/: Helper.cpp  Helper.h  Parser.h  RulesParser.cpp  RulesParser.h  VariableParser.cpp  VariableParser.h
utils/: plot_language_variables.py
